[package]
name = "funwithudp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.21.0", features = ["full", "macros", ] }
anyhow = "1.0.57"
thiserror = "1.0.31"
clap = { version="3.1.18", features = [ "derive" ] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
string-error ="0.1.0"